--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "react": "^18",
     "react-countup": "^6.5.3",
     "react-dom": "^18",
-    "react-multi-carousel": "^2.8.5"
+    "react-multi-carousel": "^2.8.5",
+    "react-slick": "^0.30.3",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "postcss": "^8",
