--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.7.3",
     "flowbite": "^2.5.1",
     "flowbite-react": "^0.10.1",
+    "framer-motion": "^12.4.2",
     "next": "14.2.5",
     "react": "^18",
     "react-countup": "^6.5.3",
